<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

   <PreferenceCategory
      app:key="appearance_category"
      app:title="@string/appearance">

      <ListPreference
         app:dialogTitle="@string/language_dialog_title"
         app:icon="@drawable/ic_baseline_language_24"
         app:key="@string/lang_key"
         app:summary="@string/lang_summary"
         app:title="@string/language_pref_title" />

      <ListPreference
         app:defaultValue="default"
         app:dialogTitle="@string/dark_mode"
         app:icon="@drawable/ic_dark_mode_24"
         app:key="@string/display_mode_key"
         app:summary="@string/display_mode_summary"
         app:title="@string/dark_mode" />
   </PreferenceCategory>

   <PreferenceCategory
      app:key="notifications_category"
      app:title="@string/notifications">

      <SwitchPreferenceCompat
         app:defaultValue="true"
         app:icon="@drawable/ic_baseline_notifications_24"
         app:key="@string/persistent_notif_key"
         app:summary="@string/persistent_notification_summary"
         app:title="@string/persistent_notification" />
   </PreferenceCategory>

</PreferenceScreen>