<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent">

   <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center">

      <TextView
         android:id="@+id/agree_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:text="@string/agree_label"
         app:layout_constraintBottom_toTopOf="@id/privacyLayout"
         app:layout_constraintTop_toTopOf="parent" />

      <androidx.cardview.widget.CardView
         android:id="@+id/privacyLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp"
         app:layout_constraintBottom_toTopOf="@id/termsLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/agree_label">

         <LinearLayout
            android:id="@+id/privacyInnerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/item_country_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="8dp"
               android:layout_weight="1"
               android:text="@string/privacy_policy"
               android:textSize="16sp"
               android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
               android:layout_width="36dp"
               android:layout_height="36dp"
               app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

         </LinearLayout>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
         android:id="@+id/termsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp"
         app:layout_constraintBottom_toTopOf="@id/continueToApp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/privacyLayout">

         <LinearLayout
            android:id="@+id/termsInnerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/item_country_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="8dp"
               android:layout_weight="1"
               android:text="@string/terms_of_service"
               android:textSize="16sp"
               android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
               android:layout_width="36dp"
               android:layout_height="36dp"
               app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

         </LinearLayout>

      </androidx.cardview.widget.CardView>

      <Button
         android:id="@+id/continueToApp"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/button_background"
         android:padding="8dp"
         android:text="@string/continue_to_app"
         app:layout_constraintBottom_toTopOf="@id/close"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/termsLayout" />

      <Button
         android:id="@+id/close"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/close_button_background"
         android:padding="8dp"
         android:text="@string/close_app"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/continueToApp" />

   </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>