<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/drawer_layout"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context="com.zboot.vpn.activities.MainActivity">

   <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/drawer_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:background="@drawable/focused_transparent_button_background"
         android:contentDescription="@string/open_drawer"
         android:padding="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_menu_24" />

      <TextView
         android:id="@+id/page_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         app:layout_constraintBottom_toBottomOf="@id/drawer_button"
         app:layout_constraintEnd_toStartOf="@id/rate"
         app:layout_constraintStart_toEndOf="@id/drawer_button"
         app:layout_constraintTop_toTopOf="@id/drawer_button" />

      <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/rate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:background="@drawable/focused_transparent_button_background"
         android:padding="8dp"
         android:contentDescription="@string/rate_description"
         app:layout_constraintEnd_toStartOf="@+id/share"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_thumb_up_24" />

      <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:contentDescription="@string/share_description"
         android:background="@drawable/focused_transparent_button_background"
         android:padding="8dp"
         app:layout_constraintEnd_toStartOf="@id/purchase"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_share_24" />

      <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/purchase"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:background="@drawable/focused_transparent_button_background"
         android:contentDescription="@string/purchase_description"
         android:padding="8dp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_no_ads" />

      <androidx.fragment.app.FragmentContainerView
          android:id="@+id/fragment_container"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_marginTop="8dp"
          app:layout_constraintBottom_toTopOf="@id/iklan"
          app:layout_constraintTop_toBottomOf="@id/drawer_button" />

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/iklan"
    app:layout_constraintBottom_toBottomOf="parent">

   <FrameLayout
       android:id="@+id/adViewLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/background"
       android:visibility="gone" />

<!--   <com.appodeal.ads.BannerView
       android:id="@+id/appodealBanner"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/background"
       android:visibility="gone" />-->
</FrameLayout>



   </androidx.constraintlayout.widget.ConstraintLayout>

   <com.google.android.material.navigation.NavigationView
      android:id="@+id/nav_view"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="start"
      app:headerLayout="@layout/nav_header"
      app:itemIconTint="@color/primary"
      app:itemTextColor="?attr/android:textColorPrimary"
      app:menu="@menu/drawer" />


</androidx.drawerlayout.widget.DrawerLayout>